hover 4 states onClick

--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Folhas de Estilo</title>
-    <!-- Link para a folha de estilo externa -->
+    <title>Estilizando Links com Estados</title>
+    <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- Cabeçalho da página -->
-    <h1>Título Principal</h1>
+    <h1>Exemplo de Estilização de Links</h1>
+    <p>Experimente interagir com os links abaixo para ver os diferentes estados:</p>
 
-    <!-- Menu de navegação -->
-    <ul id="main-nav">
-        <li><a href="/home">Início</a></li>
-        <li><a href="/about">Sobre</a></li>
-        <li>
-            <!-- Exemplo de estilo inline -->
-            <a href="/specials" class="featured" style="background-color: orange;">
-                Especiais
-            </a>
-        </li>
-    </ul>
+    <!-- Link para um site externo -->
+    <a href="https://www.google.com" target="_blank">Visite o Google</a>
+
+    <p>Aqui está outro link que você já pode ter visitado:</p>
+    <!-- Link para um site fictício -->
+    <a href="https://www.exemplo.com" target="_blank">Visite o Exemplo.com</a>
+
+    <p>Teste passar o mouse sobre os links e clique neles para ver as mudanças visuais.</p>
 </body>
 
 </html>
