--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estilizando Links com Estados</title>
-    <!-- Link para o arquivo CSS -->
+    <title>Exemplo de Valores Especiais no CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Exemplo de Estilização de Links</h1>
-    <p>Experimente interagir com os links abaixo para ver os diferentes estados:</p>
+    <!-- Rodapé -->
+    <footer class="footer">
+        © 2023 Wombat Coffee Roasters —
+        <a href="/terms-of-use">Termos de Uso</a>
+    </footer>
 
-    <!-- Link para um site externo -->
-    <a href="https://www.google.com" target="_blank">Visite o Google</a>
+    <!-- Título -->
+    <h1 class="title">Exemplo de Fonte</h1>
 
-    <p>Aqui está outro link que você já pode ter visitado:</p>
-    <!-- Link para um site fictício -->
-    <a href="https://www.exemplo.com" target="_blank">Visite o Exemplo.com</a>
-
-    <p>Teste passar o mouse sobre os links e clique neles para ver as mudanças visuais.</p>
+    <!-- Botão -->
+    <button class="btn">Clique aqui</button>
 </body>
 
 </html>
