absolute (px, pt, cm) relative (em, rem, %, vw, vh)

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Valores Especiais no CSS</title>
+    <title>Exemplo de Ems e Rems</title>
+    <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- Rodapé -->
-    <footer class="footer">
-        © 2023 Wombat Coffee Roasters —
-        <a href="/terms-of-use">Termos de Uso</a>
-    </footer>
+    <!-- Exemplo de uso de ems e rems -->
+    <div class="box box-small">Caixa Pequena</div>
+    <div class="box box-large">Caixa Grande</div>
 
-    <!-- Título -->
-    <h1 class="title">Exemplo de Fonte</h1>
+    <p class="slogan">Nós amamos café!</p>
 
-    <!-- Botão -->
-    <button class="btn">Clique aqui</button>
+    <ul>
+        <li>Nível superior
+            <ul>
+                <li>Segundo nível
+                    <ul>
+                        <li>Terceiro nível</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+    </ul>
 </body>
 
 </html>
