deep in em and rem

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Ems e Rems</title>
-    <!-- Link para o arquivo CSS -->
-    <link rel="stylesheet" href="style.css">
+    <title>Exemplo de Uso do :root</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Exemplo de uso de ems e rems -->
-    <div class="box box-small">Caixa Pequena</div>
-    <div class="box box-large">Caixa Grande</div>
+    <header>
+        <h1>Exemplo de :root em CSS</h1>
+    </header>
 
-    <p class="slogan">Nós amamos café!</p>
+    <main>
+        <section class="content">
+            <p>Este é um parágrafo com uma cor de texto definida usando uma variável CSS.</p>
+            <button class="btn">Clique Aqui</button>
+        </section>
+    </main>
 
-    <ul>
-        <li>Nível superior
-            <ul>
-                <li>Segundo nível
-                    <ul>
-                        <li>Terceiro nível</li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-    </ul>
+    <footer>
+        <p>Todos os direitos reservados &copy; 2023</p>
+    </footer>
 </body>
 
 </html>
