funcao calc() + :hover

--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento CSS</title>
+    <title>Barra de Energia</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Contêiner pai para referência visual -->
-    <div class="container">
-        <p>Contêiner pai (referência)</p>
-
-        <!-- Div explicando o posicionamento static -->
-        <div class="box static">Static</div>
-
-        <!-- Div explicando o posicionamento relative -->
-        <div class="box relative">Relative</div>
-
-        <!-- Div explicando o posicionamento absolute -->
-        <div class="box absolute">Absolute</div>
+    <div class="energy-bar">
+        <div class="energy-level"></div>
     </div>
 </body>
 
