calc(), clamp(), min(), max()

--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra de Energia</title>
+    <title>Funções CSS: calc(), clamp(), min(), max()</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="energy-bar">
-        <div class="energy-level"></div>
+    <!-- Div para demonstrar a função calc() -->
+    <div class="box calc-box">
+        Usando calc()
+    </div>
+
+    <!-- Div para demonstrar a função clamp() -->
+    <div class="box clamp-box">
+        Usando clamp()
+    </div>
+
+    <!-- Div para demonstrar a função min() -->
+    <div class="box min-box">
+        Usando min()
+    </div>
+
+    <!-- Div para demonstrar a função max() -->
+    <div class="box max-box">
+        Usando max()
     </div>
 </body>
 
