display: block & inline & grid

--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funções CSS: calc(), clamp(), min(), max()</title>
+    <title>Exemplo de Display</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Div para demonstrar a função calc() -->
-    <div class="box calc-box">
-        Usando calc()
-    </div>
+    <h1>Entendendo a Propriedade <code>display</code></h1>
 
-    <!-- Div para demonstrar a função clamp() -->
-    <div class="box clamp-box">
-        Usando clamp()
-    </div>
+    <!-- Div com display: block -->
+    <div class="box block">Eu sou um bloco (block)</div>
+    <div class="box block">Eu sou um bloco (block)</div>
 
-    <!-- Div para demonstrar a função min() -->
-    <div class="box min-box">
-        Usando min()
-    </div>
+    <!-- Div com display: inline -->
+    <div class="box inline">Eu sou inline</div>
+    <div class="box inline">Eu também sou inline</div>
 
-    <!-- Div para demonstrar a função max() -->
-    <div class="box max-box">
-        Usando max()
+    <!-- Div com display: grid -->
+    <div class="container grid">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
     </div>
 </body>
 
