--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box-Sizing Exemplo</title>
+    <title>Posicionamento CSS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Div com width/height normal -->
-    <div class="normal">Normal</div>
+    <!-- Contêiner pai para referência visual -->
+    <div class="container">
+        <p>Contêiner pai (referência)</p>
+        <!-- Div explicando o posicionamento absolute -->
+        <div class="box absolute">Absolute</div>
 
-    <!-- Div com box-sizing: border-box -->
-    <div class="border-box">Border-box</div>
+        <!-- Div explicando o posicionamento static -->
+        <div class="box static">Static</div>
 
-    <!-- Div com box-sizing: content-box -->
-    <div class="content-box">Content-box</div>
+        <!-- Div explicando o posicionamento relative -->
+        <div class="box relative">Relative</div>
+
+        <!-- Div explicando o posicionamento sticky -->
+        <div class="box sticky">Sticky</div>
+
+        <!-- Div explicando o posicionamento fixed -->
+        <div class="box fixed">Fixed</div>
+    </div>
 </body>
 
 </html>
