--- a/index.html
+++ b/index.html
@@ -4,29 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento CSS</title>
+    <title>Exemplo de Transition</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Contêiner pai para referência visual -->
-    <div class="container">
-        <p>Contêiner pai (referência)</p>
-        <!-- Div explicando o posicionamento absolute -->
-        <div class="box absolute">Absolute</div>
-
-        <!-- Div explicando o posicionamento static -->
-        <div class="box static">Static</div>
-
-        <!-- Div explicando o posicionamento relative -->
-        <div class="box relative">Relative</div>
-
-        <!-- Div explicando o posicionamento sticky -->
-        <div class="box sticky">Sticky</div>
-
-        <!-- Div explicando o posicionamento fixed -->
-        <div class="box fixed">Fixed</div>
-    </div>
+    <!-- Caixa que será animada -->
+    <div class="box">Passe o mouse aqui!</div>
 </body>
 
 </html>
