--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Transition</title>
+    <title>Exemplo de Transform</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Caixa que será animada -->
-    <div class="box">Passe o mouse aqui!</div>
+    <!-- Caixa que será transformada -->
+    <div class="box">Transform</div>
 </body>
 
 </html>
