overflow: visible; hidden; scroll; auto;

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Transform</title>
+    <title>Exemplo de Overflow</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Caixa que será transformada -->
-    <div class="box">Transform</div>
+    <!-- Caixa com conteúdo que transborda -->
+    <div class="box overflow-visible">Overflow: visible</div>
+    <div class="box overflow-hidden">Overflow: hidden</div>
+    <div class="box overflow-scroll">Overflow: scroll</div>
+    <div class="box overflow-auto">Overflow: auto</div>
 </body>
 
 </html>
