--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Overflow</title>
+    <title>Exemplo Inline vs Block</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Caixa com conteúdo que transborda -->
-    <div class="box overflow-visible">Overflow: visible</div>
-    <div class="box overflow-hidden">Overflow: hidden</div>
-    <div class="box overflow-scroll">Overflow: scroll</div>
-    <div class="box overflow-auto">Overflow: auto</div>
+    <!-- Div com display block -->
+    <div class="block">
+        Eu sou uma div com display block.
+        <!-- Um elemento block sempre começa em uma nova linha e ocupa toda a largura disponível. -->
+    </div>
+
+    <!-- Div com display inline -->
+    <div class="inline">
+        Eu sou uma div com display inline. <!-- Um elemento inline flui junto com o texto ou outros elementos inline, 
+             não ocupando toda a largura disponível. -->
+    </div>
 </body>
 
 </html>
