--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo Inline vs Block</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <!-- Div com display block -->
-    <div class="block">
-        Eu sou uma div com display block.
-        <!-- Um elemento block sempre começa em uma nova linha e ocupa toda a largura disponível. -->
-    </div>
-
-    <!-- Div com display inline -->
-    <div class="inline">
-        Eu sou uma div com display inline. <!-- Um elemento inline flui junto com o texto ou outros elementos inline, 
-             não ocupando toda a largura disponível. -->
+    <nav class="navbar">
+        <p>home</p>
+        <p>about</p>
+        <p>contact</p>
+    </nav>
+    <header class="page-header">
+        <h1>Franklin Running Club</h1>
+    </header>
+    <div class="container">
+        <main class="main">
+            <h2>Venha nos juntar!</h2>
+            <p> O <b>Franklin Running Club</b> se encontra às 18:00 toda quinta-feira na praça da cidade. As corridas
+                têm de três a cinco milhas, no seu próprio ritmo. </p>
+            <p> Junte-se a nós enquanto treinamos para o <a href="/st-patricks">Dia de São Patrício 5k</a>. Não se
+                esqueça de vestir verde! </p>
+        </main>
+        <aside class="social-links">
+            <a href="/mastodon" class="button-link">siga-nos no Mastodon</a>
+            <a href="/facebook" class="button-link">curta-nos no Facebook</a>
+        </aside>
     </div>
 </body>
 
