--- a/index.html
+++ b/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Flexbox vs Grid</title>
+    <title>Franklin Running Club</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <!-- Container principal -->
-    <div class="container">
-        <!-- Seção Flexbox -->
-        <div class="flex-container">
-            <div class="flex-item">Item 1</div>
-            <div class="flex-item">Item 2</div>
-            <div class="flex-item">Item 3</div>
-        </div>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <ul class="site-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </nav>
 
-        <!-- Seção Grid -->
-        <div class="grid-container">
-            <div class="grid-item">Item A</div>
-            <div class="grid-item">Item B</div>
-            <div class="grid-item">Item C</div>
-            <div class="grid-item">Item D</div>
-            <div class="grid-item">Item E</div>
-            <div class="grid-item">Item F</div>
-        </div>
+    <!-- Page Header -->
+    <header class="page-header">
+        <h1>Franklin Running Club</h1>
+    </header>
+
+    <!-- Container -->
+    <div class="container">
+        <!-- Main Content -->
+        <main class="main">
+            <h2>Venha nos juntar!</h2>
+            <p>O <b>Franklin Running Club</b> se encontra às 18:00 toda quinta-feira na praça da cidade. As corridas têm
+                de três a cinco milhas, no seu próprio ritmo.</p>
+            <p>Junte-se a nós enquanto treinamos para o <a href="/st-patricks">Dia de São Patrício 5k</a>. Não se
+                esqueça de vestir verde!</p>
+        </main>
+
+        <!-- Sidebar -->
+        <aside class="stack">
+            <a href="/mastodon" class="button-link">
+                Follow us on Mastodon
+            </a>
+            <a href="/facebook" class="button-link">
+                Like us on Facebook
+            </a>
+            <a href="/sponsors" class="sponsor-link">
+                Become a sponsor
+            </a>
+        </aside>
     </div>
 </body>
 
