--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franklin Running Club</title>
+    <title>Exemplo de página com Flexbox</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar">
-        <ul class="site-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Page Header -->
-    <header class="page-header">
-        <h1>Franklin Running Club</h1>
-    </header>
-
-    <!-- Container -->
     <div class="container">
-        <!-- Main Content -->
-        <main class="main">
-            <h2>Venha nos juntar!</h2>
-            <p>O <b>Franklin Running Club</b> se encontra às 18:00 toda quinta-feira na praça da cidade. As corridas têm
-                de três a cinco milhas, no seu próprio ritmo.</p>
-            <p>Junte-se a nós enquanto treinamos para o <a href="/st-patricks">Dia de São Patrício 5k</a>. Não se
-                esqueça de vestir verde!</p>
+        <header>
+            <h1>Ink</h1>
+        </header>
+        <nav>
+            <ul class="site-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/features">Recursos</a></li>
+                <li><a href="/pricing">Preços</a></li>
+                <li><a href="/support">Suporte</a></li>
+                <li class="nav-right"><a href="/about">Sobre</a></li>
+            </ul>
+        </nav>
+        <main class="flex">
+            <div class="column-main tile"> <!-- B -->
+                <h1>Colaboração em equipe feita da maneira certa</h1> <!-- B -->
+                <p>Milhares de equipes de todo o <!-- B --> mundo recorrem ao <b>Ink</b> para se comunicar <!-- B --> e
+                    realizar tarefas.</p> <!-- B -->
+            </div> <!-- B -->
+            <div class="column-sidebar"> <!-- C -->
+                <div class="tile">
+                    <form class="login-form">
+                        <h3>Login</h3>
+                        <p>
+                            <label for="username">Nome de usuário</label>
+                            <input id="username" type="text" name="username" />
+                        </p>
+                        <p>
+                            <label for="password">Senha</label>
+                            <input id="password" type="password" name="password" />
+                        </p>
+                        <button type="submit">Login</button>
+                    </form>
+                </div>
+                <div class="tile centered stack">
+                    <small>A partir de</small>
+                    <div class="cost">
+                        <span class="cost-currency">$</span>
+                        <span class="cost-dollars">20</span>
+                        <span class="cost-cents">.00</span>
+                    </div>
+                    <a class="cta-button" href="/pricing"> Inscreva-se </a>
+                </div>
+            </div>
         </main>
-
-        <!-- Sidebar -->
-        <aside class="stack">
-            <a href="/mastodon" class="button-link">
-                Follow us on Mastodon
-            </a>
-            <a href="/facebook" class="button-link">
-                Like us on Facebook
-            </a>
-            <a href="/sponsors" class="sponsor-link">
-                Become a sponsor
-            </a>
-        </aside>
     </div>
 </body>
 
